--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --port 5000",
     "build": "vite build",
     "serve": "vite preview"
   },
